--- a/index.html
+++ b/index.html
@@ -25,17 +25,13 @@
             <h2>
                 Something Random
             </h2>
-            <iframe src="https://giphy.com/embed/uYcuStWfBtHnW" width="480" height="361" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/wine-megan-mullally-uYcuStWfBtHnW">via GIPHY</a></p>
+            <iframe src="https://giphy.com/embed/uYcuStWfBtHnW" width="480" height="361" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/wine-megan-mullally-uYcuStWfBtHnW"></a></p>
             <p>
                 I've been a winemaker since middle school :) 
             </p>
         </div>
     </body>
     <footer>
-        <p class="foottext">
-            Copyright of Bad Startup Inc.
-            <a class="navlink" href="https://www.health.ny.gov/environmental/outdoors/air/trash.htm">A health warning for our investors</a>
-            <a class="navlink" href="https://en.wikipedia.org/wiki/Theranos">Click here to see what inspires us</a>
-        </p>
+        Wow only real hardos read footers
     </footer>
 </html>
